--- a/client/views/index.hbs
+++ b/client/views/index.hbs
@@ -57,7 +57,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading animate-box">
 					<h2>Quem é João Vitor?</h2>
-					<p>João Vitor, natural de São José do Rio Preto, filho de Marina e Vitor, é uma criança que, desde sua concepção, é especial aos olhos de Deus. <b>No ventre de sua mãe, João apresenta uma má formação chamada Hérnia Diafragmática Congênita, que prejudica seu desenvolvimento e coloca em risco tanto sua vida quanto a de sua mãe, Marina, durante o parto.</b></p>
+					<p>João Vitor, filho de Marina e Vitor, é uma criança que, desde sua concepção, é especial aos olhos de Deus. <b>No ventre de sua mãe, João apresenta uma má formação chamada Hérnia Diafragmática Congênita, que prejudica seu desenvolvimento e coloca em risco tanto sua vida quanto a de sua mãe, Marina, durante o parto.</b></p>
 				</div>
 			</div>
 			<div class="row">
@@ -135,7 +135,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading animate-box">
 					<h2>Seja amigo de João Vitor!</h2>
-					<p>Todo apoio é bem vindo! João foi concebido para vencer; e você pode ajudar nessa luta. Apoie os pais, Marina e Vitor, com sua orações, palavras e <b>também na operação. Faça sua doação no pix: amigosdejoaovitor@gmail.com </b></p>
+					<p>Todo apoio é bem vindo! João foi concebido para vencer; e você pode ajudar nessa luta. Apoie os pais, Marina e Vitor, com sua orações, palavras e <b>também nas primeiras fases do tratamento. Faça sua doação no pix: amigosdejoaovitor@gmail.com </b></p>
 				</div>
 			</div>
 			<div class="row">
