Client: atualizações necessárias feitas

--- a/client/views/index.hbs
+++ b/client/views/index.hbs
@@ -5,7 +5,7 @@
 				<h1><a href="index.html">Amigos de João Vitor</a></h1>
 				<nav role="navigation">
 					<ul>
-						<li class="cta"><a href="#">Faça sua Doação!</a></li>
+						<li class="cta"><a href="https://wa.link/pldr3w">Faça sua Doação!</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -24,7 +24,7 @@
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
 		   					<h2>Conheça João Vitor Mendonça de Toledo</h2>
-		   					<p><a href="https://wa.link/34fjcy" class="btn btn-primary btn-lg">Quero ajudar!</a></p>
+		   					<p><a href="https://wa.link/pldr3w" class="btn btn-primary btn-lg">Quero ajudar!</a></p>
 		   				</div>
 		   			</div>
 		   		</div>
@@ -34,17 +34,17 @@
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
 		   					<h2>Tire suas dúvidas com a gente</h2>
-		   					<p><a href="https://wa.link/34fjcy" class="btn btn-primary btn-lg">Converse conosco!</a></p>
+		   					<p><a href="https://wa.link/pldr3w" class="btn btn-primary btn-lg">Converse conosco!</a></p>
 		   				</div>
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/slide_3.jpg);">
+			<li style="background-image: url(images/slide_3.jpg);">
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
-		   					<h2>Faça sua doação pelo pix: amigosdejoavitor@gmail.com </h2>
-		   					<p><a href="https://wa.link/34fjcy" class="btn btn-primary btn-lg">Amigos de João Vitor</a></p>
+		   					<h2>Faça sua doação pelo pix:</h2>
+		   					<h3 style="color: #fff; background-color: #c99915; padding: 10px 0px 10px 0px; border-radius: 20px">amigosdejoaovitor@gmail.com</h3>
 		   				</div>
 		   			</div>
 		   		</div>
@@ -84,7 +84,7 @@
 					</a>
 				</div>
 				<div class="col-md-12 text-center animate-box">
-					<p><a href="https://wa.link/34fjcy" class="btn btn-primary with-arrow">Ajude João Vitor com sua doação! <i class="icon-arrow-right"></i></a></p>
+					<p><a href="https://wa.link/pldr3w" class="btn btn-primary with-arrow">Ajude João Vitor com sua doação! <i class="icon-arrow-right"></i></a></p>
 				</div>
 			</div>
 		</div>
@@ -193,8 +193,10 @@
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="col-md-12 text-center animate-box">
-				<h3>Ajude na cirurgia de João Vitor!</h3>
-				<p><a href="#" class="btn btn-primary btn-outline with-arrow">Apoie! <i class="icon-arrow-right"></i></a></p>
+				<h3>Apoie nas primeiras fases do tratamento de João Vitor! Faça sua doação pelo pix:
+					amigosdejoaovitor@gmail.com
+				</h3>
+				<p><a href="https://wa.link/pldr3w" class="btn btn-primary btn-outline with-arrow">Apoie! <i class="icon-arrow-right"></i></a></p>
 			</div>
 		</div>
 	</div>
@@ -206,7 +208,7 @@
 			<div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
 				<h3>Amigos de João Vitor</h3>
 				<p>Nós, Marina e Vitor, agradecemos a todos pelo apoio, de todo tipo. Que Deus abençoe. </p>
-				<p><a href="https://wa.link/34fjcy" class="btn btn-primary btn-outline with-arrow btn-sm">Fale conosco<i class="icon-arrow-right"></i></a></p>
+				<p><a href="https://wa.link/pldr3w	" class="btn btn-primary btn-outline with-arrow btn-sm">Fale conosco<i class="icon-arrow-right"></i></a></p>
 			</div>
 			
 			
