--- a/client/views/layouts/main.hbs
+++ b/client/views/layouts/main.hbs
@@ -2,47 +2,37 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> 
+	<html class="no-js" lang="pt-br"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Amigos de João Vitor</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
+	<meta name="description" content="Página em apoio a causa de João Vitor"/>
+	<meta name="keywords" content="support, help, cause, child, treatment, doctor, surgery" />
+	<meta name="author" content="Gabriel Ribeiro de Freitas" />
+	<meta name="description" content="Apoie a causa de João Vitor!">
 
-	<!-- 
-	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
+	<meta name="title" content="Amigos de João Vitor"/>
+	<meta name="description" content="Apoie as primeiras fases do tratamento de João Vitor"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:title" content="Apoie as primeiras fases do tratamento de João Vitor"/>
+	<meta property="og:description" content="Conheça, entenda e apoie o João Vitor, um menino especial que, desde sua concepção, é especial aos olhos de Deus."/>
+	<meta property="og:image" content="images/slide_1.png"/>
+	<meta name="twitter:image" content="Amigos de João Vitor" />
+	<meta name="twitter:url" content="Amigos de João Vitor" />
+	<meta name="twitter:card" content="Amigos de João Vitor" />
 
-	//////////////////////////////////////////////////////
-	 -->
 
-	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="icon" type="image/png" href="icons/favicon.ico" sizes="32x32">
 	<link rel="icon" type="image/png" href="icons/favicon.ico" sizes="16x16">
 	<link rel="apple-touch-icon" sizes="180x180" href="icons/favicon.ico">
-	<link rel="icon" href="icons/favicon.ico">
+
+	
+	<link rel="shortcut icon" href="favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700" rel="stylesheet">
 	
